--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <header>
 
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand nav_name" href="#">Aung Yang</a>
+      <a class="navbar-brand nav_name" href="#">Aung K Yang</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -50,7 +50,7 @@
             <a class="nav-link" href="#education">Education</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://docs.google.com/document/d/1ntYBLbchgADo3UEoY-RrvSriHD_oXixB7JJ4DYSvZjQ/edit?usp=sharing" target="blank">Resume</a>
+            <a class="nav-link" href="assets/jan2019_RESUME.pdf" target="blank">Resume</a>
           </li>
 
         </ul>
@@ -66,7 +66,7 @@
       <div class="intro">
         <img id="profilePic" src="assets/face-of-aung.jpeg" alt="aungyang's photo" width="350" height="350">
 
-        <p class="text">Hi I'm Aung! I am a community college student majoring in Computer Science. I am currently planning to transfer to a UC by the Fall of 2019. I enjoy problem solving, piano, and eating. </p>
+        <p class="text">Hi I'm Aungs! I am a community college student majoring in Computer Science. I am currently planning to transfer to a UC by the Fall of 2019. I enjoy problem solving, piano, and eating. </p>
 
       <div class="social_media">
         <ul>
@@ -84,7 +84,7 @@
 
 <!-- TWO Here is where I will start putting in experiences -->
       <div class="experiences">
-        <h2 id="experiences"> Experiences</h2>
+        <h2 id="experiences"> Experienced</h2>
             <div class="row">
 
               <div class="col-sm-6">
@@ -92,7 +92,7 @@
                   <div class="card_front">
                     <img class="card-img-top" src="assets/bikeindex_logo.png" alt="Card image cap">
                     <div class="card-body">
-                      <p class="card-text">Software Intern Summer 2018</p>
+                      <p class="card-text">Softwared Intern Summer 2018</p>
                     </div>
                   </div>
 
@@ -113,7 +113,7 @@
                   <div class="card_front">
                     <img class="card-img-top" src="assets/evc_logo.png" alt="Card image cap">
                     <div class="card-body">
-                      <p class="card-text"> Club Web Developer Spring 2019</p>
+                      <p class="card-text"> Clubs Web Developer Spring 2019</p>
                     </div>
                   </div>
 
