made website more responsive

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
   <header>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand nav_name" href="#">Aung K Yang</a>
+      <a class="navbar-brand nav_name" href="#">Aung Yang</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -46,7 +46,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#experiences"> Experiences <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#experiences"> Experience <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#projects">Projects</a>
@@ -71,7 +71,7 @@
     <div class="intro">
       <img id="profilePic" src="assets/face-of-aung.jpeg" alt="aungyang's photo" width="350" height="350">
 
-      <p class="text">Hi I'm Aung! I am a transfer student from Skyline College attending at UCSD this Fall. </p>
+      <p class="text">Hi I'm Aung! I am a transfer student from Skyline College attending at UCSD in the Fall of 2019. I am interested in web development and design. My hobbies include self-learning piano, watching animated news, and eating In-N-Out. </p>
 
       <div class="social_media">
         <ul>
@@ -196,15 +196,14 @@
         <div class="col-sm-6">
           <div class="card">
             <div class="card_front">
-              <img class="card-img-top" src="assets/wecook_logo.png" alt="Card image cap">
+              <img class="card-img-top" src="assets/question_mark.jpg" alt="Card image cap">
               <div class="card-body">
-                <p class="card-text">WeCook Spring 2019</p>
+                <p class="card-text">Pending Fall 2019</p>
               </div>
             </div>
 
             <div class="card_back">
-              <h5>WeCook provides a platform for college students to share simple cooking recipes; this project was
-                aimed at enhancing the students' health</h5>
+              <h5>Working on iOS app...</h5>
             </div>
 
           </div>
