actually fixed my wesbite's responsiveness

--- a/public/index.html
+++ b/public/index.html
@@ -105,23 +105,24 @@
 
             <div class="card_back">
 
-              <h5> At Bike Index, I learned about using cURL, csv, and RSA keys for safe transfer. </h5>
+              <h5> At Bike Index, I learned about using cURL, csv, RSA keys, and EC2 on Amazon's Web Services. I connected to my
+              FTP server through command line tools and Filezilla</h5> </h5>
 
-              <h5> I also learned to connect to my virtual server called EC2 on Amazon's Web Services. I connected to my
-                FTP server through command line tools and Filezilla in order to transfer files </h5>
+            
 
 
             </div>
           </div>
         </div>
 
+         
 
         <div class="col-sm-6">
           <div class="card">
             <div class="card_front">
               <img class="card-img-top" src="assets/evc_logo.png" alt="Card image cap">
               <div class="card-body">
-                <p class="card-text"> Club Web Developer Spring 2019</p>
+                <p class="card-text"> Frontend Web Developer Spring 2019</p>
               </div>
             </div>
 
@@ -290,7 +291,7 @@
         <div class="col-sm-12">
           <div class="card">
             <div class="card_front">
-              <img class="card-img-top" src="assets/ucsd_logo.png" alt="Card image cap">
+              <img class="card-img-top" src="assets/ucsd-logo_2.png" alt="Card image cap">
               <div class="card-body">
                 <p class="card-text">University of California, San Diego</p>
               </div>
