--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
   <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/script.js"></script>
 
+  <link rel="icon" href="./assets/ay-icon.png" type="image/x-icon" />
 
 </head>
 
