--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     crossorigin="anonymous"></script>
 
   <!-- linking lato font -->
-  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
 
 
   <!-- linking js -->
