--- a/public/index.html
+++ b/public/index.html
@@ -80,10 +80,19 @@
             </a></li>
           <li><a href="mailto:aungkyang622@gmail.com" target="blank"> <i class="fas fa-envelope-square"></i> </a></li>
           <li><a href="https://github.com/AungYang" target="_blank"> <i class="fab fa-github-square"></i></a></li>
+          
+            <li><a href="https://www.youtube.com/channel/UCzhAPe_t-hzYMesto0yTJBw?view_as=subscriber" target="blank"> <i class="fab fa-youtube-square"></i></a></li>
+
+
+
+            <li><a href="https://www.instagram.com/baeung622/" target="_blank"> <i class="fab fa-instagram"></i></a></li>
         </ul>
       </div>
     </div>
     <!-- end intro -->
+
+
+  
 
 
 
