--- a/public/index.html
+++ b/public/index.html
@@ -83,9 +83,10 @@
           
             <li><a href="https://www.youtube.com/channel/UCzhAPe_t-hzYMesto0yTJBw?view_as=subscriber" target="blank"> <i class="fab fa-youtube-square"></i></a></li>
 
-
-
             <li><a href="https://www.instagram.com/baeung622/" target="_blank"> <i class="fab fa-instagram"></i></a></li>
+
+            <li><a href="https://www.facebook.com/profile.php?id=100000319026626" target="_blank"> <i class="fab fa-facebook-square"></i></a></li>
+
         </ul>
       </div>
     </div>
