--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
     <div class="intro">
       <img id="profilePic" src="assets/face-of-aung.jpeg" alt="aungyang's photo" width="350" height="350">
 
-      <p class="text">Hi I'm Aung! I am a transfer student from Skyline College attending at UCSD in the Fall of 2019. I am interested in web development and design. My hobbies include self-learning piano, watching animated news, and eating In-N-Out. </p>
+      <p class="text">Hi I'm Aung Yang! I am a transfer student from Skyline College attending at UCSD in the Fall of 2019. I am interested in web development and design. My hobbies include self-learning piano, watching animated news, and eating In-N-Out. </p>
 
       <div class="social_media">
         <ul>
